--- a/index.html
+++ b/index.html
@@ -11,103 +11,95 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<div class="bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<h1 class="title-text">Hangman</h1>
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-8 text-center">
-					<div class="card">
-						<div class="card-header">
-							<h2 class="title-text" id="key-prompt-text">Any Key To Start</h2>	
-						</div>
-						<div class="card-body">
-							<div class="row">
-								<div class="col-md-12">
-									<div class="word-display-wrapper">
-										<p id="word-display">_____</p>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-3">
-									<div class="row">
-										<div class="col-md-12">
-											<p>Guesses:</p>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-12">
-										<div class="guessed-display-wrapper">
-											<p id="guessed-display"></p>
-										</div>		
-										</div>
-									</div>
-
-								</div>
-								<div class="col-md-6">
-									<div class="card-body" id="canvas-wrapper">
-										<canvas width="300" height="300"></canvas>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="card-footer">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="score-display-wrapper">
-										<p>Score: </p><p id="score-display">0</p>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="guesses-remaining-display-wrapper">
-										<p>Guesses Remaining: </p><p id="guesses-remaining-display">0</p>
-									</div>	
-								</div>
-							</div>										
-						</div>			
-					</div>
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-8">
-					<input class="letter-input" data-letter="a"subscr type="button" value="A">
-					<input class="letter-input" data-letter="b" type="button" value="B">
-					<input class="letter-input" data-letter="c" type="button" value="C">
-					<input class="letter-input" data-letter="d" type="button" value="D">
-					<input class="letter-input" data-letter="e" type="button" value="E">
-					<input class="letter-input" data-letter="f" type="button" value="F">
-					<input class="letter-input" data-letter="g" type="button" value="G">
-					<input class="letter-input" data-letter="h" type="button" value="H">
-					<input class="letter-input" data-letter="i" type="button" value="I">
-					<input class="letter-input" data-letter="j" type="button" value="J">
-					<input class="letter-input" data-letter="k" type="button" value="K">
-					<input class="letter-input" data-letter="l" type="button" value="L">
-					<input class="letter-input" data-letter="m" type="button" value="M">
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-8">
-					<input class="letter-input" data-letter="n" type="button" value="N">
-					<input class="letter-input" data-letter="o" type="button" value="O">
-					<input class="letter-input" data-letter="p" type="button" value="P">
-					<input class="letter-input" data-letter="q" type="button" value="Q">
-					<input class="letter-input" data-letter="r" type="button" value="R">
-					<input class="letter-input" data-letter="s" type="button" value="S">
-					<input class="letter-input" data-letter="t" type="button" value="T">
-					<input class="letter-input" data-letter="u" type="button" value="U">
-					<input class="letter-input" data-letter="v" type="button" value="V">
-					<input class="letter-input" data-letter="w" type="button" value="W">
-					<input class="letter-input" data-letter="x" type="button" value="X">
-					<input class="letter-input" data-letter="y" type="button" value="Y">
-					<input class="letter-input" data-letter="z" type="button" value="Z">
-				</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h1 class="title-text">Ol' West Hangman</h1>
 			</div>
 		</div>
-	</div>
+		<div class="row justify-content-center">
+			<div class="col-12 text-center"><!--Column begin-->
+				<div class="card"> <!--Card begin-->
+					<div class="card-header">
+						<h2 class="title-text" id="key-prompt-text">Any Key To Start</h2>	
+					</div>
+					<div class="card-body">
+						<div class="row"><!--Inner row begin-->
+							<div class="col-md-12">
+								<div class="word-display-wrapper">
+									<p id="word-display">_____</p>
+								</div>
+							</div>
+						</div><!--Inner row end-->
+						<div class="row"><!--Inner row begin-->
+							<div class="col-md-6">
+								<div class="row">
+									<div class="col-md-12">
+										<p>Guesses:</p>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12">
+									<div class="guessed-display-wrapper">
+										<p id="guessed-display"></p>
+									</div>		
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="card-body" id="canvas-wrapper">
+									<canvas width="150" height="150"></canvas>
+								</div>
+							</div>
+						</div><!--Inner row end-->
+					</div>
+					<div class="card-footer">
+						<div class="row"><!--Inner row begin-->
+							<div class="col-md-2">
+								<div class="guesses-remaining-display-wrapper">
+									<p>Tries:</p><p id="guesses-remaining-display">0</p>
+								</div>	
+							</div>
+
+							<div class="col-md-8">
+								<input class="letter-input" data-letter="a" type="button" value="A">
+								<input class="letter-input" data-letter="b" type="button" value="B">
+								<input class="letter-input" data-letter="c" type="button" value="C">
+								<input class="letter-input" data-letter="d" type="button" value="D">
+								<input class="letter-input" data-letter="e" type="button" value="E">
+								<input class="letter-input" data-letter="f" type="button" value="F">
+								<input class="letter-input" data-letter="g" type="button" value="G">
+								<input class="letter-input" data-letter="h" type="button" value="H">
+								<input class="letter-input" data-letter="i" type="button" value="I">
+								<input class="letter-input" data-letter="j" type="button" value="J">
+								<input class="letter-input" data-letter="k" type="button" value="K">
+								<input class="letter-input" data-letter="l" type="button" value="L">
+								<input class="letter-input" data-letter="m" type="button" value="M">
+								<input class="letter-input" data-letter="n" type="button" value="N">
+								<input class="letter-input" data-letter="o" type="button" value="O">
+								<input class="letter-input" data-letter="p" type="button" value="P">
+								<input class="letter-input" data-letter="q" type="button" value="Q">
+								<input class="letter-input" data-letter="r" type="button" value="R">
+								<input class="letter-input" data-letter="s" type="button" value="S">
+								<input class="letter-input" data-letter="t" type="button" value="T">
+								<input class="letter-input" data-letter="u" type="button" value="U">
+								<input class="letter-input" data-letter="v" type="button" value="V">
+								<input class="letter-input" data-letter="w" type="button" value="W">
+								<input class="letter-input" data-letter="x" type="button" value="X">
+								<input class="letter-input" data-letter="y" type="button" value="Y">
+								<input class="letter-input" data-letter="z" type="button" value="Z">
+							</div>
+							<div class="col-md-2">
+								<div class="score-display-wrapper">
+									<p>Score: </p><p id="score-display">0</p>
+								</div>
+							</div>
+						</div><!--Inner row end-->										
+					</div>			
+				</div> <!--Card end-->
+			</div><!--Column end-->
+		</div><!--Row end-->
+	</div><!--Container end-->
 	
 	<script src="assets/scripts/hangmanGame.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
