Made on screen buttons be disabled on click and keyboard input.

--- a/index.html
+++ b/index.html
@@ -53,32 +53,32 @@
 								</div>	
 							</div>
 							<div class="col-md-8">
-								<input class="letter-input" data-letter="a" type="button" value="A">
-								<input class="letter-input" data-letter="b" type="button" value="B">
-								<input class="letter-input" data-letter="c" type="button" value="C">
-								<input class="letter-input" data-letter="d" type="button" value="D">
-								<input class="letter-input" data-letter="e" type="button" value="E">
-								<input class="letter-input" data-letter="f" type="button" value="F">
-								<input class="letter-input" data-letter="g" type="button" value="G">
-								<input class="letter-input" data-letter="h" type="button" value="H">
-								<input class="letter-input" data-letter="i" type="button" value="I">
-								<input class="letter-input" data-letter="j" type="button" value="J">
-								<input class="letter-input" data-letter="k" type="button" value="K">
-								<input class="letter-input" data-letter="l" type="button" value="L">
-								<input class="letter-input" data-letter="m" type="button" value="M">
-								<input class="letter-input" data-letter="n" type="button" value="N">
-								<input class="letter-input" data-letter="o" type="button" value="O">
-								<input class="letter-input" data-letter="p" type="button" value="P">
-								<input class="letter-input" data-letter="q" type="button" value="Q">
-								<input class="letter-input" data-letter="r" type="button" value="R">
-								<input class="letter-input" data-letter="s" type="button" value="S">
-								<input class="letter-input" data-letter="t" type="button" value="T">
-								<input class="letter-input" data-letter="u" type="button" value="U">
-								<input class="letter-input" data-letter="v" type="button" value="V">
-								<input class="letter-input" data-letter="w" type="button" value="W">
-								<input class="letter-input" data-letter="x" type="button" value="X">
-								<input class="letter-input" data-letter="y" type="button" value="Y">
-								<input class="letter-input" data-letter="z" type="button" value="Z">
+								<input class="letter-input" id="letter-a" data-letter="a" type="button" value="A">
+								<input class="letter-input" id="letter-b" data-letter="b" type="button" value="B">
+								<input class="letter-input" id="letter-c" data-letter="c" type="button" value="C">
+								<input class="letter-input" id="letter-d" data-letter="d" type="button" value="D">
+								<input class="letter-input" id="letter-e" data-letter="e" type="button" value="E">
+								<input class="letter-input" id="letter-f" data-letter="f" type="button" value="F">
+								<input class="letter-input" id="letter-g" data-letter="g" type="button" value="G">
+								<input class="letter-input" id="letter-h" data-letter="h" type="button" value="H">
+								<input class="letter-input" id="letter-i" data-letter="i" type="button" value="I">
+								<input class="letter-input" id="letter-j" data-letter="j" type="button" value="J">
+								<input class="letter-input" id="letter-k" data-letter="k" type="button" value="K">
+								<input class="letter-input" id="letter-l" data-letter="l" type="button" value="L">
+								<input class="letter-input" id="letter-m" data-letter="m" type="button" value="M">
+								<input class="letter-input" id="letter-n" data-letter="n" type="button" value="N">
+								<input class="letter-input" id="letter-o" data-letter="o" type="button" value="O">
+								<input class="letter-input" id="letter-p" data-letter="p" type="button" value="P">
+								<input class="letter-input" id="letter-q" data-letter="q" type="button" value="Q">
+								<input class="letter-input" id="letter-r" data-letter="r" type="button" value="R">
+								<input class="letter-input" id="letter-s" data-letter="s" type="button" value="S">
+								<input class="letter-input" id="letter-t" data-letter="t" type="button" value="T">
+								<input class="letter-input" id="letter-u" data-letter="u" type="button" value="U">
+								<input class="letter-input" id="letter-v" data-letter="v" type="button" value="V">
+								<input class="letter-input" id="letter-w" data-letter="w" type="button" value="W">
+								<input class="letter-input" id="letter-x" data-letter="x" type="button" value="X">
+								<input class="letter-input" id="letter-y" data-letter="y" type="button" value="Y">
+								<input class="letter-input" id="letter-z" data-letter="z" type="button" value="Z">
 							</div>
 							<div class="col-md-2">
 								<div class="score-display-wrapper">
