--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="col-12 text-center"><!--Column begin-->
 				<div class="card"> <!--Card begin-->
 					<div class="card-header">
-						<h2 class="prompt-text" id="key-prompt-text">Any Key To Start</h2>	
+						<h2 class="prompt-text" id="key-prompt-text">Any Key To Start</h2>
 					</div>
 					<div class="card-body">
 						<div class="row"><!--Inner row begin-->
@@ -44,6 +44,7 @@
 								</div>
 							</div>
 						</div><!--Inner row end-->
+						<h4 class="continue-prompt-text scaleit" id="continue-display"></h4>	
 					</div>
 					<div class="card-footer">
 						<div class="row"><!--Inner row begin-->
